project(lib4aio)

include_directories(../lib4aio)

add_library(
        #---------------------------------------------------------------------------------------------------------------
        #LIBRARY NAME:
        lib4aio
        #---------------------------------------------------------------------------------------------------------------
        #HEADERS:
        lib4aio_cpp_headers/aio_orbit/aio_orbit.h
        lib4aio_cpp_headers/utils/string_utils/cast.h
        lib4aio_cpp_headers/utils/string_utils/trim.h
        lib4aio_cpp_headers/utils/string_utils/match.h
        lib4aio_cpp_headers/utils/string_utils/split.h
        lib4aio_cpp_headers/aio_explorer/aio_explorer.h
        lib4aio_cpp_headers/utils/string_utils/common.h
        lib4aio_cpp_headers/utils/log_utils/log_utils.h
        lib4aio_cpp_headers/aio_path_util/aio_path_util.h
        lib4aio_cpp_headers/utils/char_utils/char_utils.h
        lib4aio_cpp_headers/utils/file_utils/file_reader.h
        lib4aio_cpp_headers/utils/struct_list/struct_list.h
        lib4aio_cpp_headers/utils/int_list_utils/int_list.h
        lib4aio_cpp_headers/utils/color_utils/color_utils.h
        lib4aio_cpp_headers/utils/error_utils/error_utils.h
        lib4aio_cpp_headers/utils/str_builder/str_builder.h
        lib4aio_cpp_headers/utils/memory_utils/memory_utils.h
        lib4aio_cpp_headers/utils/string_utils/suffix_prefix.h
        lib4aio_cpp_headers/utils/array_list_utils/array_list.h
        lib4aio_cpp_headers/utils/point_watcher/point_watcher.h
        lib4aio_cpp_headers/aio_orbit/aio_particle/aio_particle.h
        lib4aio_cpp_headers/aio_pattern_utils/aio_pattern_utils.h
        lib4aio_cpp_headers/utils/str_hook_utils/str_hook/str_hook.h
        lib4aio_cpp_headers/utils/str_hook_utils/str_hook_list/str_hook_list.h
        lib4aio_cpp_headers/utils/str_hook_utils/str_hook_iterator/str_hook_iterator.h
        #---------------------------------------------------------------------------------------------------------------
        #SOURCES:
        lib4aio_cpp_sources/aio_orbit/aio_orbit.cpp
        lib4aio_cpp_sources/utils/string_utils/cast.cpp
        lib4aio_cpp_sources/utils/string_utils/trim.cpp
        lib4aio_cpp_sources/utils/string_utils/match.cpp
        lib4aio_cpp_sources/utils/string_utils/split.cpp
        lib4aio_cpp_sources/aio_explorer/aio_explorer.cpp
        lib4aio_cpp_sources/utils/log_utils/log_utils.cpp
        lib4aio_cpp_sources/utils/string_utils/common.cpp
        lib4aio_cpp_sources/utils/char_utils/char_utils.cpp
        lib4aio_cpp_sources/aio_path_util/aio_path_util.cpp
        lib4aio_cpp_sources/utils/file_utils/file_reader.cpp
        lib4aio_cpp_sources/utils/str_builder/str_builder.cpp
        lib4aio_cpp_sources/utils/struct_list/struct_list.cpp
        lib4aio_cpp_sources/utils/error_utils/error_utils.cpp
        lib4aio_cpp_sources/utils/int_list_utils/int_list.cpp
        lib4aio_cpp_sources/utils/memory_utils/memory_utils.cpp
        lib4aio_cpp_sources/utils/string_utils/suffix_prefix.cpp
        lib4aio_cpp_sources/utils/point_watcher/point_watcher.cpp
        lib4aio_cpp_sources/utils/array_list_utils/array_list.cpp
        lib4aio_cpp_sources/aio_orbit/aio_particle/aio_particle.cpp
        lib4aio_cpp_sources/utils/str_hook_utils/str_hook/str_hook.cpp
        lib4aio_cpp_sources/utils/str_hook_utils/str_hook_list/str_hook_list.cpp
        lib4aio_cpp_sources/utils/str_hook_utils/str_hook_iterator/str_hook_iterator.cpp
        lib4aio_cpp_sources/utils/str_hook_utils/str_hook/advanced_functions/str_hook_log.cpp
        lib4aio_cpp_sources/utils/str_hook_utils/str_hook/advanced_functions/str_hook_cast.cpp
        lib4aio_cpp_sources/utils/str_hook_utils/str_hook/advanced_functions/str_hook_trim.cpp
        lib4aio_cpp_sources/utils/str_hook_utils/str_hook/advanced_functions/str_hook_split.cpp
        lib4aio_cpp_sources/utils/str_hook_utils/str_hook/advanced_functions/str_hook_error.cpp
        lib4aio_cpp_sources/utils/str_hook_utils/str_hook/advanced_functions/str_hook_matcher.cpp
        lib4aio_cpp_sources/utils/str_hook_utils/str_hook_list/advanced_functions/str_hook_trim.cpp
        lib4aio_cpp_sources/utils/str_hook_utils/str_hook_list/advanced_functions/str_hook_list_log.cpp
        #---------------------------------------------------------------------------------------------------------------
)